--- a/style/main.scss
+++ b/style/main.scss
@@ -9,3 +9,8 @@ html {
     background-color: #131313;
     background-size: 20px 20px;
 }
+
+@font-face {
+    font-family: 'Kode Mono';
+    src: local('Kode Mono'), url('../fonts/KodeMono-Medium.ttf') format('truetype');
+}
